--- a/views/header.html
+++ b/views/header.html
@@ -1,4 +1,5 @@
 <div>
     <li><a ui-sref="home">Home</a></li>
     <li><a ui-sref="about">About us</a></li>
+    <li><a ui-sref="services">Services</a></li>
 </div>
